small cleanings and version updates