@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.svenruppert</groupId>
         <artifactId>dependencies</artifactId>
-        <version>06.00.02</version>
+        <version>06.00.05</version>
     </parent>
 
     <artifactId>expedition-planner</artifactId>
@@ -79,6 +79,8 @@
         <slf4j.version>1.7.30</slf4j.version>
         <log4j-api.version>2.13.0</log4j-api.version>
 
+        <spotbugs.skip>true</spotbugs.skip>
+
         <pitest-prod-classes>com.svenruppert.*</pitest-prod-classes>
         <pitest-test-classes>junit.com.svenruppert.*</pitest-test-classes>
 
@@ -87,12 +89,12 @@
         <junit-platform-maven-plugin.timeout>300</junit-platform-maven-plugin.timeout>
 
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <vaadin.version>24.7.2</vaadin.version>
+        <vaadin.version>24.7.3</vaadin.version>
         <drivers.downloader.phase>pre-integration-test</drivers.downloader.phase>
         <jetty.version>11.0.25</jetty.version>
-        <testcontainers.version>1.20.4</testcontainers.version>
+        <testcontainers.version>1.21.0</testcontainers.version>
 
-        <undertow.version>2.3.15.Final</undertow.version>
+        <undertow.version>2.3.18.Final</undertow.version>
 
     </properties>
 
@@ -179,7 +181,7 @@
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
                 <artifactId>selenium-api</artifactId>
-                <version>4.27.0</version>
+                <version>4.31.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -188,7 +190,7 @@
         <dependency>
             <groupId>com.svenruppert</groupId>
             <artifactId>core</artifactId>
-            <version>06.00.00</version>
+            <version>06.00.05</version>
         </dependency>
         <dependency>
             <groupId>com.svenruppert</groupId>
@@ -204,12 +206,12 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
-            <version>6.1.3</version>
+            <version>6.6.0</version>
         </dependency>
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-testtools</artifactId>
-            <version>6.1.3</version>
+            <version>6.6.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -218,7 +220,7 @@
         <dependency>
             <groupId>org.eclipse.store</groupId>
             <artifactId>storage-embedded</artifactId>
-            <version>2.1.2</version>
+            <version>2.1.3</version>
         </dependency>
 
         <dependency>
@@ -277,7 +279,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.4.0</version>
+            <version>5.5.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -302,7 +304,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.9.2</version>
+            <version>6.1.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -389,13 +391,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <configuration>
-                    <!--                    <rulesUri>version-number-rules.xml</rulesUri>-->
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.codehaus.mojo</groupId>-->
+<!--                <artifactId>versions-maven-plugin</artifactId>-->
+<!--                <configuration>-->
+<!--                    &lt;!&ndash;                    <rulesUri>version-number-rules.xml</rulesUri>&ndash;&gt;-->
+<!--                </configuration>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-scm-plugin</artifactId>
@@ -582,14 +584,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED --enable-native-access=ALL-UNNAMED</argLine>
-                </configuration>
-
             </plugin>
             <plugin>
                 <groupId>org.cyclonedx</groupId>
